--- a/pom.xml
+++ b/pom.xml
@@ -4,6 +4,13 @@
       <groupId>org.sonarsource.scanner.maven</groupId>
       <artifactId>sonar-maven-plugin</artifactId>
       <version>3.9.0.2155</version>
+      <executions>
+        <execution>
+          <goals>
+            <goal>sonar</goal>
+          </goals>
+        </execution>
+      </executions>
     </plugin>
   </plugins>
 </build>
